# wamr-rp2350

./: Cargo.toml  build.rs
example/: Cargo.toml  memory.x
example/.cargo/: config.toml
example/src/: main.rs
src/: lib.rs  wamr_bridge_stub.c  wamr_platform.c
src/wamr_platform_rp2350/: platform_internal.h
